--- a/src/components/Nav/Nav.module.css
+++ b/src/components/Nav/Nav.module.css
@@ -1,13 +1,12 @@
 .nav {
-  width: 375px;
+  width: 100%;
   height: 66px;
 
   padding: 35px 0;
 
   display: flex;
   align-items: center;
-  justify-content: center;
-  gap: 20px;
+  justify-content: space-evenly;
   overflow: hidden;
 }
 
