--- a/src/reset.css
+++ b/src/reset.css
@@ -1,10 +1,19 @@
 * {
-  padding: 0;
-  margin: 0;
   box-sizing: border-box;
+  margin: 0;
+  padding: 0;
 }
 
 a {
-  text-decoration: none;
   color: inherit;
+  text-decoration: none;
+}
+
+button {
+  color: inherit;
+  background-color: transparent;
+  border: none;
+  outline: none;
+
+  cursor: pointer;
 }
