--- a/src/components/nav/Nav.module.css
+++ b/src/components/nav/Nav.module.css
@@ -1,17 +1,20 @@
 .nav {
-
   display: flex;
   align-items: center;
   justify-content: space-evenly;
   width: 100%;
   height: 66px;
 
-  padding: 35px 0;
+  position: fixed;
+  bottom: 0;
+  /* padding: 35px 0; */
   overflow: hidden;
 }
 
 .link {
   position: relative;
+  width: max(20%, 60px);
+  height: 66px;
 }
 
 .link[data-type='speed'] {
@@ -30,22 +33,29 @@
 .content {
   display: flex;
   flex-direction: column;
-  gap: 4px;
   align-items: center;
+  justify-content: center;
+  height: 66px;
+  gap: 4px;
 }
 
 .bg {
   position: absolute;
-  z-index: -1;
+  inset: 50%;
+  transform: translate(-50%, -50%);
+
   width: 20px;
   height: 20px;
+
   background: var(--grad);
 
-  border-radius: 9999px;
-  transform: translate(-50%, -50%);
+  transition: opacity .5s ease,
+    width 1s cubic-bezier(.26, .84, .21, .97),
+    height 1s cubic-bezier(.26, .84, .21, .97);
+
   opacity: 0;
-  transition: all .5s ease;
-  inset: 50%;
+  border-radius: 9999px;
+  z-index: -1;
 }
 
 .link.active {
@@ -60,7 +70,7 @@
 
 .link svg {
   filter: saturate(1) brightness(1);
-  transition: all .5s ease;
+  transition: filter 2s cubic-bezier(.26, .84, .21, .97);
 }
 
 .link.active svg {
