--- a/src/global.css
+++ b/src/global.css
@@ -8,7 +8,7 @@
 
 ::view-transition-old(root),
 ::view-transition-new(root) {
-  animation-duration: .5s;
+  animation-duration: .1s;
 }
 
 html {
@@ -40,4 +40,6 @@ html {
 body {
   color: white;
   background: #191919;
+  display: flex;
+  flex-direction: column;
 }
