--- a/src/routes/speed/Speed.module.css
+++ b/src/routes/speed/Speed.module.css
@@ -9,7 +9,6 @@
   display: flex;
   gap: 8px;
   align-items: end;
-  line-height: 120.023%;
 }
 
 .title {
@@ -22,7 +21,50 @@
   font-size: 14px;
 }
 
+
+
 .num {
+  padding-top: 3px;
   font-weight: 700;
   font-size: 18px;
+}
+
+.speedometer {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 0 36px ;
+}
+
+.gauge {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  --ang: 260deg;
+  width: 300px;
+  height: 300px;
+  background: conic-gradient(from -130deg, rgba(60, 56, 86, 1), rgba(216, 105, 255, 1) var(--ang), #191919 calc(var(--ang) + .1deg));
+  border-radius: 9999px;
+}
+
+.circle {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  gap: 4px;
+  width: 250px;
+  height: 250px;
+  border-radius: 9999px;
+  background-color: #191919;
+}
+
+.num {
+  font-size: 26px;
+  font-weight: 700;
+}
+
+.name {
+  color: #999;
+  font-weight: 400;
 }
