--- a/src/components/header/Header.module.css
+++ b/src/components/header/Header.module.css
@@ -3,3 +3,10 @@
   background: rgba(34, 34, 34, 0.95);
   backdrop-filter: blur(6px);
 }
+.heading {
+  font-size: var(--head-size);
+}
+.subheading {
+  font-size: var(--subhead-size);
+  color: #999;
+}
