--- a/src/global.css
+++ b/src/global.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Noto+Sans:wght@400;600;700&display=swap');
+@import url("public/noto-sans/noto-sans.css");
 
 :root {
   view-transition-name: root !important;
@@ -13,22 +13,9 @@
   animation-duration: .1s;
 }
 
+
 html {
-  font-family:
-    ui-sans-serif,
-    system-ui,
-    -apple-system,
-    BlinkMacSystemFont,
-    "Segoe UI",
-    Roboto,
-    "Helvetica Neue",
-    Arial,
-    "Noto Sans",
-    sans-serif,
-    "Apple Color Emoji",
-    "Segoe UI Emoji",
-    "Segoe UI Symbol",
-    "Noto Color Emoji";
+  font-family: 'Noto Sans', sans-serif;
   -moz-tab-size: 4;
   -o-tab-size: 4;
   tab-size: 4;
