--- a/src/global.css
+++ b/src/global.css
@@ -1,4 +1,4 @@
-@import url("public/noto-sans/noto-sans.css");
+@import url('https://fonts.googleapis.com/css2?family=Noto+Sans:wght@400;700&display=swap');
 
 :root {
   --head-size: 30px;
@@ -18,6 +18,7 @@ main {
 
 html {
   font-family: 'Noto Sans', sans-serif;
+  font-size: var(--base-size);
   -moz-tab-size: 4;
   -o-tab-size: 4;
   tab-size: 4;
