--- a/src/routes/speed/Speed.module.css
+++ b/src/routes/speed/Speed.module.css
@@ -8,6 +8,7 @@
 .top {
   display: flex;
   justify-content: space-evenly;
+  background: #292929;
   padding: 20px 0;
 }
 
@@ -42,13 +43,14 @@
 }
 
 .gauge {
+  --ang: 0deg;
+
   display: flex;
   justify-content: center;
   align-items: center;
-  --ang: 260deg;
   width: 300px;
   height: 300px;
-  background: conic-gradient(from -130deg, rgba(60, 56, 86, 1), rgba(216, 105, 255, 1) var(--ang), #191919 calc(var(--ang) + .1deg));
+  background: conic-gradient(from -130deg, rgba(60, 56, 86, 1), rgba(216, 105, 255, 1) var(--ang), #222 calc(var(--ang) + .1deg));
   border-radius: 9999px;
 }
 
